# UAVDEX

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_profile.prof  tox.ini
.github/workflows/: release.yml
src/uavdex/: PlotTesting.py  __init__.py  _version.py  common.py  localtests.py  performance.py  propulsions.py  quicktest.py  unittable.py  utils.py
src/uavdex/Databases/: Batteries.csv  ESCs_Gong.csv  ESCs_Saemi.csv  MotorCurveFits.xlsx  Motors.csv
src/uavdex/Databases/APCPropDatabase/: proplist.txt
src/uavdex/Databases/UIUCPropDatabase/: 1OVERVIEW.txt  ancf_10x12_0746od_3035.txt  ancf_10x12_0747od_3042.txt  ancf_10x12_0748od_4026.txt  ancf_10x12_0749od_4046.txt  ancf_10x12_0750od_5010.txt  ancf_10x12_0751od_5034.txt  ancf_10x12_0752od_6036.txt  ancf_10x12_0753od_6031.txt  ancf_10x12_static_0754od.txt  ancf_10x4_0274od_3039.txt  ancf_10x4_0275od_4035.txt  ancf_10x4_0276od_5030.txt  ancf_10x4_0277od_6026.txt  ancf_10x4_0278od_6042.txt  ancf_10x4_0279od_7016.txt  ancf_10x4_0280od_7055.txt  ancf_10x4_static_0273od.txt  ancf_10x5_0756od_3036.txt  ancf_10x5_0757od_4017.txt  ancf_10x5_0758od_5027.txt  ancf_10x5_0759od_5039.txt  ancf_10x5_0760od_6003.txt  ancf_10x5_0761od_6052.txt  ancf_10x5_static_0755od.txt  ancf_10x6_0730od_3033.txt  ancf_10x6_0731od_4011.txt  ancf_10x6_0732od_4998.txt  ancf_10x6_0733od_5056.txt  ancf_10x6_0734od_5975.txt  ancf_10x6_0735od_6031.txt  ancf_10x6_static_0729od.txt  ancf_10x7_0737od_3017.txt  ancf_10x7_0738od_4038.txt  ancf_10x7_0739od_4050.txt  ancf_10x7_0740od_4994.txt  ancf_10x7_0741od_5050.txt  ancf_10x7_0742od_5963.txt  ancf_10x7_0743od_6029.txt  ancf_10x7_static_0736od.txt  (+425 more)
src/uavdex/VSPcontribution/: atmosphere.py  units.py
tests/: BatteryModels.py  documentation_examples.py  profile_tests.py  test_module1.py  test_pointdesign.py  test_propmodel.py
