[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavdex"
description = "Unmanned Aerial Vehicle Design EXploration - A Python package for multidisciplinary analysis and optimization of electric group 1-2 UAVs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name="Samuel Noble Nassau", email="sammynassau@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "gekko",
    "pandas",
    "tqdm",
    "numba",
    "mplcursors"
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/sammy183/UAVDEX"

[tool.setuptools_scm]
write_to = "src/uavdex/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]